Versión funcional modelos y web

--- a/app/templates/data.html
+++ b/app/templates/data.html
@@ -8,6 +8,7 @@
 <h2>Mapa de calor</h2>
 <img src="{{ data.url_image }}" alt="Heatmap" style="width: 100%">
 
+<h2>Tabla de correlativos</h2>
 <table border="1" cellpadding="10">
     <thead>
         <tr>
