--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Initial</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Add Material CSS, replace Bootstrap CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename ='css/material.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename ='css/index.css') }}">
+    <title>Inicio</title>
+  </head>
 <body>
-    <h1>Subir dataset de entrenamiento</h1>
-    <form action="/" method="POST" enctype="multipart/form-data">
-        <input type="file" id="uploadFile" name="file" accept=".csv">
-        <input type="submit" value="Enviar">
-    </form>
+    <section>
+        <h2 class="text-center mt-3">Bienvenido a Stay Studying<hr></h2>
+    </section>
+
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+
+            <div class="col-md-12" style="padding:50px 50px;">
+                <form action="/" method="POST" autocomplete="off" enctype="multipart/form-data">
+                    <div class="custom-file">
+                        <input type="file" name="file" class="custom-file-input" required>
+                        <label class="custom-file-label" for="validatedCustomFile">Seleccionar lista de estudiantes...</label>
+                    </div>
+                
+                    <div class="form-group mb-5 text-center mt-5">
+                        <button type="submit" class="btn btn-primary btn-sm">Cargar datos</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group mb-5 text-center mt-5">
+        <button onclick="window.location.href='/analisis'" class="btn btn-primary btn-sm">Ver Análisis Exploratorio (AED)</button>
+    </div>
+
+    <div class="form-group mb-5 text-center mt-5">
+        <button onclick="window.location.href='/models_info'" class="btn btn-primary btn-sm">Entrenamiento y Comparación de Modelos</button>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename ='js/material.min.js') }}">
 </body>
 </html>
